Self/playorg/Unpackaged/Config/objects/Mutual_Fund__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Account_Role__c</fullName>
        <label>Bank Account Role</label>
        <referenceTo>Holding_Group__c</referenceTo>
        <relationshipName>Bank_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Holdings_Amount__c</fullName>
        <label>Holdings Amount</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Third_Party_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Third Party Provider</label>
        <referenceTo>Third_Party_Provider__c</referenceTo>
        <relationshipName>Bank_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Mutual Fund</label>
    <nameField>
        <label>Mutual Fund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mutual Funds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>